--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "next": "15.3.3",
