--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.81.5",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
+    "mongodb": "^6.18.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
